# Meleys

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  change.md  commit_msg.txt  config.toml  export.md  spec.md
.github/workflows/: build.yml  ci.yml  docs-deploy.yml  release.yml
.superpowers/: task-10-brief.md  task-11-brief.md  task-12-brief.md  task-14-brief.md  task-8-brief.md  task-9-brief.md
docs/: api.md  architecture.md  configuration.md  docusaurus.config.js  mcp.md  package-lock.json  setup.md  sidebars.js
docs/docs/: api.md  architecture.md  configuration.md  intro.md  mcp.md  setup.md
docs/docs/superpowers/: _category_.json
docs/docs/superpowers/plans/: 2026-07-18-multi-engine-architecture.md  _category_.json
docs/docs/superpowers/specs/: 2026-07-18-multi-engine-architecture-design.md  _category_.json
docs/src/pages/: index.js
docs/superpowers/plans/: 2026-07-18-multi-engine-architecture.md
docs/superpowers/specs/: 2026-07-18-multi-engine-architecture-design.md
src/: config.rs  error.rs  lib.rs  main.rs  observation.rs  selector.rs
src/actions/: capture.rs  cookies.rs  download.rs  extraction.rs  interaction.rs  mod.rs  navigation.rs  search.rs  session.rs  tabs.rs
src/cdp/: ax_tree.rs  dom.rs  launcher.rs  mod.rs
src/engine/: chromium.rs  fallback.rs  lightpanda.rs  mod.rs
src/session/: browser_session.rs  mod.rs  profile.rs
src/setup/: mod.rs
src/transport/: http.rs  mcp.rs
tests/: integration_navigation.rs  integration_search.rs  integration_sessions.rs
wix/: build.ps1  config.toml  meleys.wxs
