[package]
name = "meleys"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lightweight, agent-first Chromium runtime in Rust that gives LLMs programmable hands on the web"

[[bin]]
name = "meleys"
path = "src/main.rs"

[lib]
name = "meleys"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
chromiumoxide = { version = "0.7", features = ["tokio", "tokio-runtime"], default-features = false }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
base64 = "0.22"
futures = "0.3"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3

